Add argparse for filename

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,4 @@ description = "Python package intended to help with automation of video editing"
 authors = ["Steve G <pagekeysolutions@gmail.com>"]
 
 [tool.poetry.scripts]
-pkvid = 'pkvid.cli:cli_entry_point'
+pkvid = 'pkvid.cli:main'
