--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pkvid = 'pkvid.cli:main'
 
 [tool.poetry.dependencies]
 python = ">=3.7"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
