--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pkvid = 'pkvid.cli:main'
 [tool.poetry.dependencies]
 python = ">=3.7"
 pyyaml = "^6.0.1"
+pydantic = "^2.5.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
