--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ authors = ["Steve G <pagekeysolutions@gmail.com>"]
 pkvid = 'pkvid.cli:main'
 
 [tool.poetry.dependencies]
-python = ">=3.7"
+python = "==3.10.*"
 pyyaml = "^6.0.1"
 pydantic = "^2.5.3"
+bpy = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
