Get render actually working!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ version = "0.1.0"
 description = "Python package intended to help with automation of video editing"
 authors = ["Steve G <pagekeysolutions@gmail.com>"]
 
-[tool.poetry.scripts]
-pkvid = 'pkvid.cli:main'
+# [tool.poetry.scripts]
+# pkvid = 'pkvid.cli:main'
 
 [tool.poetry.dependencies]
 python = "==3.10.*"
