--- a/test/sample_config.yaml
+++ b/test/sample_config.yaml
@@ -24,6 +24,11 @@ clips:
       x: 0.5
       y: 0.5
     start_with_last: true
+  - type: text
+    channel: 5
+    body: hi, I started with last
+    length: 15
+    start_with_last: true
   # - type: subproject
   #   project:
   #     name: Nested Project
