--- a/test/sample_config.yaml
+++ b/test/sample_config.yaml
@@ -29,17 +29,26 @@ clips:
     body: hi, I started with last
     length: 15
     start_with_last: true
-  # - type: subproject
-  #   project:
-  #     name: Nested Project
-  #     clips:
-  #     - type: text
-  #       body: here is mr krabs a second time
-  #       length: 5
-  #     - type: video
-  #       path: test/sample.mp4
-  #     - type: text
-  #       body: here is mr krabs a third time
-  #       length: 15
-  #     - type: video
-  #       path: test/sample.mp4
+    offset:
+      x: 480
+      y: -270
+    scale:
+      x: 0.5
+      y: 0.5
+  - type: subproject
+    channel: 6
+    start_with_last: true
+    offset:
+      x: -480
+      y: -270
+    scale:
+      x: 0.5
+      y: 0.5
+    project:
+      name: Nested Project
+      clips:
+      - type: text
+        body: this is a subproject
+        length: 30
+      - type: video
+        path: test/sample.mp4
