Get filter passthrough working

--- a/test/sample_config.yaml
+++ b/test/sample_config.yaml
@@ -1,10 +1,11 @@
 name: Some project
 clips:
-  # - type: filter
-  #   filter_function: pkvid.filters.add_captions
-  #   video:
-  #     type: video
-  #     path: test/sample.mp4
+  - type: filter
+    module: pkvid.filters
+    function: add_captions
+    video:
+      type: video
+      path: test/sample.mp4
   - type: text
     body: this is 15 frames
     length: 15
