--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ authors = ["Steve G <pagekeysolutions@gmail.com>"]
 python = "==3.10.*"
 pyyaml = "^6.0.1"
 pydantic = "^2.5.3"
+openai-whisper = "^20231117"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
