--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,5 @@ version = "0.1.0"
 description = "Python package intended to help with automation of video editing"
 authors = ["Steve G <pagekeysolutions@gmail.com>"]
 
-# [tool.poetry.scripts]
-# pkvid = 'pkvid.cli:main'
-
-[tool.poetry.dependencies]
-python = "==3.10.*"
-pyyaml = "^6.0.1"
-pydantic = "^2.5.3"
-openai-whisper = "^20231117"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.4.3"
+[tool.poetry.scripts]
+pkvid = 'pkvid.cli:main'
