--- a/test/integration/pkvid.yaml
+++ b/test/integration/pkvid.yaml
@@ -1,16 +1,16 @@
 name: Some project
 clips:
-  # - type: filter
-  #   module: pkvid.filters
-  #   function: add_captions
-  #   video:
-  #     type: video
-  #     path: sample.mp4
-  # - type: text
-  #   body: this is 15 frames
-  #   length: 15
-  # - type: text
-  #   body: this is 30 frames
+  - type: filter
+    module: pkvid.filters
+    function: add_captions
+    video:
+      type: video
+      path: sample.mp4
+  - type: text
+    body: this is 15 frames
+    length: 15
+  - type: text
+    body: this is 30 frames
   - type: video
     path: sample.mp4
     channel: 1
@@ -20,41 +20,41 @@ clips:
     scale:
       x: 0.5
       y: 0.5
-  # - type: video
-  #   path: sample.mp4
-  #   channel: 3
-  #   offset:
-  #     x: 480
-  #     y: 270
-  #   scale:
-  #     x: 0.5
-  #     y: 0.5
-  #   start_with_last: true
-  # - type: text
-  #   channel: 5
-  #   body: hi, I am just a text
-  #   length: 45
-  #   start_with_last: true
-  #   offset:
-  #     x: 480
-  #     y: -270
-  #   scale:
-  #     x: 0.5
-  #     y: 0.5
-  # - type: subproject
-  #   channel: 6
-  #   start_with_last: true
-  #   offset:
-  #     x: -480
-  #     y: -270
-  #   scale:
-  #     x: 0.5
-  #     y: 0.5
-  #   project:
-  #     name: Nested Project
-  #     clips:
-  #     - type: text
-  #       body: this is a subproject
-  #       length: 30
-  #     - type: video
-  #       path: sample.mp4
+  - type: video
+    path: sample.mp4
+    channel: 3
+    offset:
+      x: 480
+      y: 270
+    scale:
+      x: 0.5
+      y: 0.5
+    start_with_last: true
+  - type: text
+    channel: 5
+    body: hi, I am just a text
+    length: 45
+    start_with_last: true
+    offset:
+      x: 480
+      y: -270
+    scale:
+      x: 0.5
+      y: 0.5
+  - type: subproject
+    channel: 6
+    start_with_last: true
+    offset:
+      x: -480
+      y: -270
+    scale:
+      x: 0.5
+      y: 0.5
+    project:
+      name: Nested Project
+      clips:
+      - type: text
+        body: this is a subproject
+        length: 30
+      - type: video
+        path: sample.mp4
