--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = ["Steve G. <pagekeysolutions@gmail.com>"]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9"
 pydantic = "^2.5.3"
 pyyaml = "^6.0.1"
 # openai-whisper = "20231117"
