--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = ">=3.9"
 pydantic = "^2.5.3"
 pyyaml = "^6.0.1"
 # openai-whisper = "20231117"
+moviepy = "^1.0.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
