--- a/test/integration/pkvid.yaml
+++ b/test/integration/pkvid.yaml
@@ -4,15 +4,15 @@ clips:
     path: sample.mp4
   - type: video
     path: sample.mp4
+  - type: text
+    body: this is 15 frames
+    length: 15
   # - type: filter
   #   module: pkvid.filters
   #   function: add_captions
   #   video:
   #     type: video
   #     path: sample.mp4
-  # - type: text
-  #   body: this is 15 frames
-  #   length: 15
   # - type: text
   #   body: this is 30 frames
   # - type: video
