--- a/test/integration/pkvid.yaml
+++ b/test/integration/pkvid.yaml
@@ -2,11 +2,29 @@ name: Some project
 clips:
   - type: video
     path: sample.mp4
-  - type: video
-    path: sample.mp4
   - type: text
     body: this is 15 frames
     length: 15
+  - type: video
+    path: sample.mp4
+  - type: subproject
+    channel: 6
+    start_with_last: true
+    offset:
+      x: -480
+      y: -270
+    scale:
+      x: 0.5
+      y: 0.5
+    project:
+      name: Nested Project
+      clips:
+      - type: text
+        body: this is a subproject
+        length: 30
+      - type: video
+        path: sample.mp4
+
   # - type: filter
   #   module: pkvid.filters
   #   function: add_captions
@@ -45,20 +63,3 @@ clips:
   #   scale:
   #     x: 0.5
   #     y: 0.5
-  # - type: subproject
-  #   channel: 6
-  #   start_with_last: true
-  #   offset:
-  #     x: -480
-  #     y: -270
-  #   scale:
-  #     x: 0.5
-  #     y: 0.5
-  #   project:
-  #     name: Nested Project
-  #     clips:
-  #     - type: text
-  #       body: this is a subproject
-  #       length: 30
-  #     - type: video
-  #       path: sample.mp4
