--- a/.releaserc
+++ b/.releaserc
@@ -3,7 +3,17 @@
     "main"
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "releaseRules": [
+          { "release": "patch", "type": "docs" },
+          { "release": "patch", "type": "fix" },
+          { "release": "minor", "type": "feat" },
+          { "release": "major", "type": "major" },
+        ],
+      }
+    ],
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/changelog",
